start calculator page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
             <li id="tony">uncle tony</li>
         </ol>
         <h6>literally joey</h6>
-        
+        <a href="sections.html">the new york times knockoff</a>
     </body>
 </html>
